Boost-like include directory (that is with the name of the project)

--- a/win/NatsortLib/NatsortLib.vcxproj.filters
+++ b/win/NatsortLib/NatsortLib.vcxproj.filters
@@ -20,8 +20,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\src\strnatcmp.h">
-      <Filter>Fichiers sources</Filter>
+    <ClInclude Include="..\..\natsort\strnatcmp.h">
+      <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
